
global_cflags = []
global_lflags = []

global_cflags += [
  '-DPREFIX="'+ prefix + '"',
  '-DGIMPDIR="'+ gimpdir + '"',
  '-DDATADIR="'+ datadir + '"',
  '-DLOCALEDIR="'+ localedir + '"',
  '-DPLUGINDIR="'+ plugindir + '"',
  '-DSYSCONFDIR="'+ sysconfdir + '"',
  '-DGIMP_PACKAGE="'+ gettext_package + '"',
  '-DGIMP_DATA_VERSION="'+ data_version + '"',
  '-DGIMP_USER_VERSION="'+ user_version + '"',
  '-DGIMP_SYSCONF_VERSION="'+ sysconf_version + '"',
  '-DGIMP_PLUGIN_VERSION="'+ plugin_version + '"',
]

if platform_win32
  global_cflags += '-no-undefined'
endif

if platform_osx
  global_cflags += '-xobjective-c'
  global_lflags += ['-framework', 'Cocoa']
endif

if os_win32
  global_lflags += '-lexchndl'
  # global_lflags += ['-export-symbols', 'gimp.def']
  # global_lflags += ['-export-symbols', 'gimpui.def']
endif


global_cflags += [
  '-DG_LOG_DOMAIN="'+ 'LibGimp' + '"',
  '-DGIMP_COMPILATION',
]

libgimp_sources = [
  'gimp_pdb.c',
  'gimp.c',
  'gimpaspectpreview.c',
  'gimpbrush_pdb.c',
  'gimpbrushes_pdb.c',
  'gimpbrushes.c',
  'gimpbrushmenu.c',
  'gimpbrushselect_pdb.c',
  'gimpbrushselect.c',
  'gimpbrushselectbutton.c',
  'gimpbuffer_pdb.c',
  'gimpchannel_pdb.c',
  'gimpchannel.c',
  'gimpcolor_pdb.c',
  'gimpcontext_pdb.c',
  'gimpdebug_pdb.c',
  'gimpdisplay_pdb.c',
  'gimpdrawable_pdb.c',
  'gimpdrawable.c',
  'gimpdrawablecolor_pdb.c',
  'gimpdrawablepreview.c',
  'gimpdrawabletransform_pdb.c',
  'gimpdynamics_pdb.c',
  'gimpedit_pdb.c',
  'gimpedit.c',
  'gimpexport.c',
  'gimpfileops_pdb.c',
  'gimpfloatingsel_pdb.c',
  'gimpfontmenu.c',
  'gimpfonts_pdb.c',
  'gimpfontselect_pdb.c',
  'gimpfontselect.c',
  'gimpfontselectbutton.c',
  'gimpgimprc_pdb.c',
  'gimpgimprc.c',
  'gimpgradient_pdb.c',
  'gimpgradientmenu.c',
  'gimpgradients_pdb.c',
  'gimpgradients.c',
  'gimpgradientselect_pdb.c',
  'gimpgradientselect.c',
  'gimpgradientselectbutton.c',
  'gimphelp_pdb.c',
  'gimpimage_pdb.c',
  'gimpimage.c',
  'gimpimagecolorprofile_pdb.c',
  'gimpimagecolorprofile.c',
  'gimpimagecombobox.c',
  'gimpimageconvert_pdb.c',
  'gimpimagegrid_pdb.c',
  'gimpimageguides_pdb.c',
  'gimpimagemetadata.c',
  'gimpimagesamplepoints_pdb.c',
  'gimpimageselect_pdb.c',
  'gimpimagetransform_pdb.c',
  'gimpimageundo_pdb.c',
  'gimpitem_pdb.c',
  'gimpitemcombobox.c',
  'gimpitemtransform_pdb.c',
  'gimplayer_pdb.c',
  'gimplayer.c',
  'gimpmenu.c',
  'gimpmessage_pdb.c',
  'gimppainttools_pdb.c',
  'gimppalette_pdb.c',
  'gimppalette.c',
  'gimppalettemenu.c',
  'gimppalettes_pdb.c',
  'gimppalettes.c',
  'gimppaletteselect_pdb.c',
  'gimppaletteselect.c',
  'gimppaletteselectbutton.c',
  'gimppaths_pdb.c',
  'gimppattern_pdb.c',
  'gimppatternmenu.c',
  'gimppatterns_pdb.c',
  'gimppatterns.c',
  'gimppatternselect_pdb.c',
  'gimppatternselect.c',
  'gimppatternselectbutton.c',
  'gimppixbuf.c',
  'gimppixelfetcher.c',
  'gimppixelrgn.c',
  'gimpplugin_pdb.c',
  'gimpplugin.c',
  'gimpprocbrowserdialog.c',
  'gimpproceduraldb_pdb.c',
  'gimpproceduraldb.c',
  'gimpprocview.c',
  'gimpprogress_pdb.c',
  'gimpprogress.c',
  'gimpprogressbar.c',
  'gimpregioniterator.c',
  'gimpselectbutton.c',
  'gimpselection_pdb.c',
  'gimpselection.c',
  'gimpselectiontools_pdb.c',
  'gimptextlayer_pdb.c',
  'gimptexttool_pdb.c',
  'gimptile.c',
  'gimptilebackendplugin.c',
  'gimptransformtools_pdb.c',
  'gimpui.c',
  'gimpunit_pdb.c',
  'gimpunitcache.c',
  'gimpvectors_pdb.c',
  'gimpvectors.c',
  'gimpzoompreview.c',
]

