libgimpwidgets_sources = [
  'gimp3migration.c',
  'gimpbrowser.c',
  'gimpbutton.c',
  'gimpcairo-utils.c',
  'gimpcellrenderercolor.c',
  'gimpcellrenderertoggle.c',
  'gimpchainbutton.c',
  'gimpcolorarea.c',
  'gimpcolorbutton.c',
  'gimpcolordisplay.c',
  'gimpcolordisplaystack.c',
  'gimpcolorhexentry.c',
  'gimpcolornotebook.c',
  'gimpcolorprofilechooserdialog.c',
  'gimpcolorprofilecombobox.c',
  'gimpcolorprofilestore.c',
  'gimpcolorprofileview.c',
  'gimpcolorscale.c',
  'gimpcolorscales.c',
  'gimpcolorselect.c',
  'gimpcolorselection.c',
  'gimpcolorselector.c',
  'gimpcontroller.c',
  'gimpdialog.c',
  'gimpeevl.c',
  'gimpenumcombobox.c',
  'gimpenumlabel.c',
  'gimpenumstore.c',
  'gimpenumwidgets.c',
  'gimpfileentry.c',
  'gimpframe.c',
  'gimphelpui.c',
  'gimphintbox.c',
  'gimpicons.c',
  'gimpintcombobox.c',
  'gimpintstore.c',
  'gimpmemsizeentry.c',
  'gimpnumberpairentry.c',
  'gimpoffsetarea.c',
  'gimpoldwidgets.c',
  'gimppageselector.c',
  'gimppatheditor.c',
  'gimppickbutton-default.c',
  'gimppickbutton-quartz.c',
  'gimppickbutton.c',
  'gimppixmap.c',
  'gimppreview.c',
  'gimppreviewarea.c',
  'gimppropwidgets.c',
  'gimpquerybox.c',
  'gimpruler.c',
  'gimpscaleentry.c',
  'gimpscrolledpreview.c',
  'gimpsizeentry.c',
  'gimpstringcombobox.c',
  'gimpunitcombobox.c',
  'gimpunitmenu.c',
  'gimpunitstore.c',
  'gimpwidgets-error.c',
  'gimpwidgets-private.c',
  'gimpwidgets.c',
  'gimpwidgetsenums.c',
  'gimpwidgetsutils.c',
  'gimpzoommodel.c',
  'test-eevl.c',
  'test-preview-area.c',
]
